Opened 16 years ago

Closed 3 years ago

#4303 closed bug (fixed)

app_server doesn't gracefully deal with missing accelerant

Reported by: anevilyak Owned by: axeld
Priority: normal Milestone: R1/beta4
Component: Servers/app_server Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

If a kernel driver for a graphics chip is present and publishes a device, but its corresponding accelerant is missing, the app_server fails to gracefully fall back to a different device. Noticed this by accident while disabling the radeon (removed the accelerant instead of the kernel driver like I usually do). End result, "Could not initialize graphics output, exiting" on serial, and the Desktop never appeared.

Change History (4)

comment:1 by waddlesplash, 7 years ago

Still a bug? Fallback support has gotten some pretty substantial reworking.

comment:2 by anevilyak, 7 years ago

As far as I'm aware, no work has been done to address this specific problem, but I'll recheck this weekend.

comment:3 by pulkomandy, 5 years ago

Milestone: R1R1.1

comment:4 by waddlesplash, 3 years ago

Milestone: R1.1R1/beta4
Resolution: fixed
Status: newclosed

Fixed in hrev56252.

Note: See TracTickets for help on using tickets.